practice/terraform/07/7.1.tf
resource "aws_vpc" "example" {
    cidr_block           = "10.0.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name = "example"
    }
}
